# priorflow

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
agents/: base.py  eligibility_checker.py  pa_form_filler.py  status_monitor.py
app/: globals.css  layout.tsx  page.tsx
components/: agent-activity-feed.tsx  chart-uploader.tsx  eligibility-result-card.tsx  pa-request-card.tsx  pa-status-badge.tsx  patient-card.tsx  sidebar.tsx  status-timeline.tsx
convex/: agentRuns.ts  alerts.ts  eligibilityChecks.ts  paRequests.ts  patients.ts  schema.ts
docs/: CONVEX-SETUP.md  DEV-1.md  DEV-2.md  DEV-3.md  DEV-4.md  MERGE-POINTS.md
frontend/: README.md  index.html  mock.json  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
landing-template/: package-lock.json
scripts/: dev_start.sh  manual_login.py  run_eligibility.py  run_full_flow.py  run_pa.py  run_pa_demo.py  seed_data.py  test_agentmail.py
server/: config.py  main.py  observability.py  scheduler.py
shared/: constants.py  models.py
tests/: conftest.py  test_api.py  test_db_client_convex_payload.py  test_eligibility_agent.py  test_eligibility_runtime.py  test_flexpa_client.py  test_intake_convex_payload.py  test_minimax_client.py  test_minimax_extractor.py  test_models.py  test_orchestrator_eligibility.py  test_orchestrator_status_monitor.py  test_orchestrator_wait_for_run.py  test_pa_agent.py  test_status_monitor_agent.py
tools/: alert_sender.py  chart_loader.py  db_client.py  eligibility_parser.py  flexpa_client.py  form_mapper.py  justification_gen.py  minimax_client.py  (+1 more)
(+113 files in other folders)
